--- a/GoodVersion/app/src/main/res/values/strings.xml
+++ b/GoodVersion/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
-    <string name="app_name">AI3DApp</string>
+    <string name="app_name">Server Info</string>
 
     <string name="title_activity_rendering">Rendering</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
